OtoFileManager: Refactor the codes and fix some issues
1. Refactor Forward and Back function
2. Refactor Up function
3. Click Cloud Service Information crash
4. Default Collection System Folder
5. The collection interface button is not fully displayed
6. There may be a problem with the forward back icon during use
7. There may be a problem with the up icon during use
8. Local disk entries are hidden when there is no automount disks
9. Refactoring file Display page to avoid OOM Errors
10.Organize the codes to quickly open file management
11.Temporarily masks the search function
12.Fixed some special operation fallback, File Manager crash problem
13.Unified management of the display of the address bar
14.Top file Information display format correction to avoid understanding errors

Signed-off-by: Wang Zhixu <wangzhixu@openthos.org>